// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    hola
  </h1>
</div>
`;

exports[`ProductCard debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    hola
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +
  </button>
</div>
`;

exports[`ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug
  </span>
</div>
`;

exports[`ProductTitle Debe mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription custom"
>
  Custom title
</span>
`;
